# libguiding

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: ppg.h
include/guiding/: guiding.h  wrapper.h
include/guiding/distributions/: btree.h
include/guiding/internal/: tree.h
include/guiding/structures/: btree.h  histogram.h  kdtree.h
include/guiding/wrappers/: point.h
jupyter/vmf/: VMF.ipynb
src/: guiding.cpp
tst/: CMakeLists.txt  demo-2d.cpp  demo-5d.cpp  main.cpp  pointcloud.h  test.cpp  utils.h
